[package]
name = "nox-handle-gateway"
version = "0.5.0"
edition = "2024"
license = "BUSL-1.1"

[dependencies]
aes-gcm = "0.10.3"
alloy-contract = "1.8.2"
alloy-primitives = { version = "1.5.7", features = ["serde"] }
alloy-provider = "1.8.2"
alloy-signer = { version = "1.5.7", features = ["eip712"] }
alloy-signer-local = "1.5.7"
alloy-sol-types = "1.5.7"
anyhow = "1.0.102"
aws-config = "1.8.15"
aws-sdk-s3 = "1.127.0"
axum = "0.8.8"
axum-prometheus = "0.10.0"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
config = "0.15.22"
config-secret = "0.1.0"
futures-util = "0.3.32"
hkdf = "0.12.4"
k256 = { version = "0.13.4", features = ["ecdh"] }
metrics-exporter-prometheus = "0.18.1"
reqwest = { version = "0.13.2", features = ["json", "query"] }
rsa = "0.9.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
temp-env = "0.3.6"
